--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "postcss-plugin-px2rem": "^0.8.1",
     "vant": "^2.10.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -17,7 +19,6 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
-    "postcss-pxtorem": "^5.1.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
